--- a/스프링철저입문05.md
+++ b/스프링철저입문05.md
@@ -15,16 +15,192 @@
 
 ---
 
-##5.1 웹 애플리케이션의 종류
+## 5.1 웹 애플리케이션의 종류
+- 화면으로 응답하는 애플리케이션 (jsp, html)
+- 데이터로 응답하는 애플리케이션 (json, xml)
+## 5.2 애플리케이션 설정
+- 어플리케이션 컨텍스트 설정
+- 프런트 컨트롤러 설정 (@EnableWebMvc 추가)
 
-**[5.2 애플리케이션 설정](#)**<br/>
-**[5.3 @Controller 구현](#)**<br/>
-**[5.4 요청 매핑](#)**<br/>
-**[5.5 요청 데이터 취득](#)**<br/>
-**[5.6 폼 클래스 구현](#)**<br/>
-**[5.7 입력값 검사](#)**<br/>
-**[5.8 화면 이동](#)**<br/>
-**[5.9 뷰 선택](#)**<br/>
-**[5.10 JSP 구현](#)**<br/>
-**[5.11 스프링 html 폼 전용 태그 라이브러리의 활용](#)**<br/>
-**[5.12 스프링 범용 태그 라이브러리의 활용](#)**<br/>
+## 5.3 @Controller 구현
+
+요청 결과를 화면에 표시하기 위해 컨트롤러가 필요하다.
+- @Controller 애너테이션을 지정해주면 1) 컴포넌트 스캔 기능을 사용해 DI컨테이너에
+빈으로 등록할 수 있고, 2) 핸들러 메서드가 정의돼 있는 클래스로 인식된다.
+- DispatcherServlet에서 컴포넌트 스캔 기능을 사용해 DI 컨테이너에 등록한다.
+```javascript
+package example.app;
+@Controller
+public class WelcomeController {
+
+}
+// DispatcherServlet에 등록
+@Configuration
+@EnableWebMvc
+@ComponentScan("example.app")
+public class WebMvcConfig extends WebMvcConfigureAdapter {
+}
+```
+
+### 핸들러 메서드
+- 요청을 처리하는 메서드.
+- 핸들러 메서드로 인식되면 프런트 컨트롤러가 @RequestMapping에 지정된 매핑 정보를 읽고
+요청에 대응하는 핸들러 메서드를 자동으로 호출한다.
+
+## 5.4 요청 매핑
+
+요청이 들어올 때 선택되는 메서드를 지정해주는 매핑 방법. `@RequestMapping`을 사용한다.
+
+### @RequestMapping에서 지정 가능한 속성들
+- value : 요청 경로
+- path : value 의 별명
+- method : HTTP 메서드값 GET,POST,PUT
+- params
+- headers
+- consumes : Content-Type 지정
+- produces
+- name : 매핑 정보에 임의의 이름을 지정
+
+## 5.5 요청 데이터 취득
+
+- @PathVariable 경로 변수 값 취득
+- @RequestParam 파라미터 값 취득
+- @RequestHeader 요청 헤더값 취득
+- @CookieValue 쿠키값 취득
+- 요청 데이터를 폼 클래스의 프로퍼티나 메서드의 파라미터로 바인딩하고 싶으면
+`WebDataBinder`의 메서드를 확장해서 커스터마이징한다.
+- 바인딩 수행하기 전에 `@InitBinder` 에너테이션이 붙은 메서드를 호출한다.
+- 그 후 이 메서드를 컨트롤러 클래스에 구현해준다.
+
+## 5.6 폼 클래스 구현
+
+html 폼 입력 필드를 자바빈즈로 표현한 클래스다.
+폼 객체는 요청 스코프, 플래시 스코프, 세션 스코프 중 하나에서 관리된다.
+- 폼 클래스는 Serializable 인터페이스를 구현해주자.
+- 타입과 바인딩 하고 싶으면 html 폼의 필드명과 폼 클래스의 프로퍼티명을 일치시키면 된다.
+```javascript
+<input type="text" name="name"...>
+<input type="text" name="tel"...>
+```
+- 요청 파라미터 앞에 `_(언더스코어)`를 붙인다.
+  프로퍼티 값 설정 해제 (체크박스를 체크됨-> 체크안됨 으로 변경, 입력 항목을
+  활성-> 비활성으로 변경하는 경우에 필요하다.)
+
+## 5.7 입력값 검사
+
+요청 파라미터 값이 올바른지 검사하는 것.
+메서드의 매개변수에 폼 클래스르 정의하고 Valid 를 지정하고, BindingResult 를 정의한다.
+```javascript
+@RequestMapping(method = RequestMethod.GET)
+Public String search(
+  @Validated AccountSearchForm form,
+  BindingResult result, // 바인딩 오류와 입력값 검사 오류가 저장된다.
+  Model model) {
+    ...
+  }
+```
+
+### 입력값 검사 규칙 지정
+- 필수항목 검사 @NotNull
+- 자릿수 @Size
+- 문자유형 @Pattern
+- 포맷 @NumberFormat...
+- 범위 @Min, @Max, @DecimalMin, @DecimalMax
+- 날짜/시간 @DateTimeFormat, @Past, @Future
+- true/false @AssertTrue @AssertFalse
+
+### 입력값 검사 규칙 추가
+- @Pattern 을 정의한 후
+- 독자적인 애너테이션을 사용
+
+### 검사 규칙 교체
+@Validated의 value 속성을 유형별로 만든다.
+```javascript
+@Validated(FreeAccount.class) AccountCreateForm form
+...
+@Validated(PayAccount.class) AccountCreateForm form
+```
+
+### 오류 정보 표시
+- `<form:form>` 이나 `<form:input>` 을 사용한다.
+- form 의 path 속성에 프로퍼티명을 지정하면 그 메세지만 html 에 출력된다.
+`<form:errors path="name"`
+- 모든 에러 한번에 표시하고 싶다면 `<form:errors path="*" />`
+- 먼저 MessageSource에서 메세지를 가져온다.
+```javascript
+NotNull.name = 이름을 입력해주세요.
+NotNull.java.lang.String = 문자열을 입력해주세요.
+NotNull = 값을 입력해주세요.
+```
+- 여기서 원하는 메세지가 없다면 Bean Vlidation이 관리하는 메세지 중에서
+자신이 찾는 메세지가 있는지 확인한다. `ValidationMessages.properties`에 정의함.
+
+
+## 5.8 화면 이동
+
+- 메서드가 뷰 이름을 반환하는 방법 `return "home";`
+- 경로 리다이렉트 `return "redirect:/menu";`
+- 요청 파라미터 지정 - RediretAttributes 에 파라미터를 지정한다.
+ ```javascript
+ redirectAttributes.addAttribute("accountId", createdAccount.getAccountId());
+ return "redirect:/menu/create?complete";
+ // /menu/create?complete&accountId=A0001
+ ```
+ - 동적 경로 지정
+ ```javascript
+ return "redirect:/menu/{menuId}?create";
+ // /menu/A0001?create
+ ```
+ - 뷰와 데이터 연계 <br/>
+ 1) Model API를 직접 호출해서 addAttribute를 사용해 자바 객체를 model 에 저장
+ `model.addAttribute(account);`
+ 2) @ModelAttribute를 사용하는 방법
+ - 리다이렉트 대상과의 데이터 연계. 화면을 이동할 대 리다이렉트 방식으로 핸들러나
+ 뷰에 도달하면 리다이렉트 전의 정보를 참조하지 못한다.
+`RedirectAttributes`에 저장하면 된다. `redirectAttributes.addFlashAttribute(createdAccount)`;
+
+## 5.9 뷰 선택
+
+뷰는 **모델에 저장된 자바 객체를 참조** 해서 클라이언트에 **반환할 응답 데이터를 만드는 컴포넌트** 다.
+
+## 5.10 JSP 구현
+
+지시자는 jsp 를 어떻게 처리할지를 서블릿 컨테이너에 대해 지시하는 요소다.
+- page 지시자 : jsp 페이지의 동작 방식을 지정
+```javascript
+<%@ page pageEncoding="UTF-8" %>
+```
+- taglib 지시자 : 커스텀 태그 라이브러리를 사용하기 위함
+```javascript
+<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
+```
+- include 지시자 : 다른 파일에 기재된 코드를 가져오기 위함.
+```javascript
+<%@ include file="/WEB-INF/header.jsp"%>
+```
+
+### 스크립트릿
+
+- `<%@ %>` 또는 `<%= %>`사이에 자바 코드를 포함할 수 있다.
+
+### EL (Expression Language)
+- `${...}` 또는 `#{...}` 형식으로 작성한다.
+
+### jsp 공통설정
+- web.xml 에 <jsp-config> 요소를 사용해서 서블릿 컨테이너에서 jsp 를 어떻게 처리할 것인지를 지시한다.
+
+### JSTL
+- JSP 에서 많이 사용하는 커스텀 태그.
+- pom.xml 에 dependency 를 설정하고
+- jsp 상단에 태그 라이브러리를 선언한다.
+```javascript
+<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
+<%@ taglib prefix="fmt" uri="http://java.sun.com/jsp/jstl/core" %>
+<%@ taglib prefix="fn" uri="http://java.sun.com/jsp/jstl/core" %>
+```
+
+### 태그 라이브러리
+- `<%@ taglib prefix="form" uri="http://www.springframework.org/tags/form" %>`
+
+## 5.11 스프링 html 폼 전용 태그 라이브러리의 활용
+## 5.12 스프링 범용 태그 라이브러리의 활용
