--- a/00_용어정리.md
+++ b/00_용어정리.md
@@ -25,3 +25,8 @@
 ## VO (Value Object)
 - 계층 간 데이터 교환을 위한 자바빈즈
 - DB에서 가져온 데이터를 담아 전달하거나, 화면에서 온 데이터를 DB로 전달해주는 역할을 하는 클래스이다.
+
+## REST API
+- REST(REpresentational State Transfer)
+- 클라이언트와 서버 사이에서 데이터를 주고받는 애플리케이션을 만들기 위한
+아키텍쳐 스타일 중 하나
