--- a/스프링철저입문06.md
+++ b/스프링철저입문06.md
@@ -3,16 +3,16 @@
 ```
 ## 목차 ##
 
-**[6.1 REST API 아키텍처](#)**<br/>
-**[6.2 애플리케이션 설정](#)**<br/>
-**[6.3 @RestController 구현](#)**<br/>
-**[6.4 리소스 클래스 구현](#)**<br/>
-**[6.5 예외 처리](#)**<br/>
-**[6.6 REST 클라이언트 구현](#)**<br/>
+**[6.1 REST API 아키텍처](#1)**<br/>
+**[6.2 애플리케이션 설정](#2)**<br/>
+**[6.3 @RestController 구현](#3)**<br/>
+**[6.4 리소스 클래스 구현](#4)**<br/>
+**[6.5 예외 처리](#5)**<br/>
+**[6.6 REST 클라이언트 구현](#6)**<br/>
 
 ---
 
-## 6.1 REST API 아키텍처
+## <a id="1"></a>6.1 REST API 아키텍처
 
 - REST(REpresentational State Transfer) 는
 클라이언트와 서버 사이에서 데이터를 주고받는 애플리케이션을 만들기 위한
@@ -32,7 +32,7 @@
 - 응답 본문을 생성하기 위한 뷰를 사용하지 않는다.
 - **리소스 클래스** 를 사용한다.
 
-## 6.2 애플리케이션 설정
+## <a id="2"></a>6.2 애플리케이션 설정
 - JSON 사용하려면
 ```javascript
 <dependency>
@@ -42,7 +42,7 @@
 ```
 - REST API를 개발할 땐 ViewResolver에 대한설정은 필요없다.
 
-## 6.3 @RestController 구현
+## <a id="3"></a>6.3 @RestController 구현
 - REST API를 개발할 때 만들어야 하는 주요 컴포넌트는 **컨트롤러 클래스** 와 **리소스 클래스** 두 가지다.
 - 컨트롤러는 @Controller 대신 @RestController를 사용한다.
 - @RequestBody 를 붙여서 요청 본문의 데이터(JSON)를 받아낼 수 있다.
@@ -72,7 +72,7 @@ public ... createBook(..., UriComponentsBuilder uriBuilder) {
 핸들러 메서드의 정의 정보(요청 매핑이나 메서드 매개변수 정보)와
 연동할 수 있어 path 보다 우수하다.
 
-## 6.4 리소스 클래스 구현
+## <a id="4"></a>6.4 리소스 클래스 구현
 
 - 리소스 클래스는 JSON이나 XML형식의 데이터를 자바빈즈로 표현한 클래스다.
 - 리소스 클래스를 통해 서버와 클라이언트 사이의 리소스 상태를 연계한다.
@@ -85,12 +85,12 @@ public ... createBook(..., UriComponentsBuilder uriBuilder) {
 > - Date and Time API 클래스를 지원. jackson-datatype-jsr310<br/>
 > - 날짜/시간 타입의 포맷을 지정<br/>
 
-## 6.5 예외 처리
+## <a id="5"></a>6.5 예외 처리
 - 오류 정보를 담을 자바빈즈를 만들어 둔다.
 - ResponseEntityExceptionHandler 를 상속해서 예외 핸들러 클래스 만든다.
 - 클래스를 그대로 사용하면 오류 발생해도 본문이 빈 상태가 되니 `handleExceptionInternal`메서드를 오버라이드한다.
 
-## 6.6 REST 클라이언트 구현
+## <a id="6"></a>6.6 REST 클라이언트 구현
 - 자바에서 REST API 호출하는 방법
 1) HTTP 클라이언트 라이브러리를 사용한다.
 2) HttpURLConnection 클래스를 사용한다.
