--- a/스프링철저입문02.md
+++ b/스프링철저입문02.md
@@ -2,16 +2,29 @@
 
 ## 2.1 DI (Dependency Injection)
 
-여러가지의 클래스가 조합되어 있는 클래스를 만들려면 구현 클래스가 이미 개발되어 있어야 한다.
-하지만 실제상황에선 수정작업을 하게 될 수도 있고 이미 완성된 클래스를 만들어 두는 경우가 흔하지 않다.
-그래서 컴포넌트가 완성될 때까지 임시의 Dummy로 클래스를 만들어 대체하는 방법을 사용한다.
+보통 애플리케이션을 개발할 땐 여러개의 컴포넌트를 조합해서 구현하는 경우가 일반적이다. '데이터 베이스에 접근하는 컴포넌트', '공통으로 사용되는 기능을 따로 분리한 컴포넌트' 등 다양한 컴포넌트가 사용되는데, 여러개의 컴포넌트를 통합해서 관리하는 **의존성 주입**접근방식이 사용된다.
 
-이렇게 어떤 클래스가 필요로 하는 컴포넌트를 외부에서 생성한 후, 내부에서 사용 가능하게 만들어 주는
+### 더미 클래스
+
+UserServiceImpl 이라는 클래스 안에 userRepository, passwordEncoder 에 UserRepository 와 PasswordEncoder 를 할당하고 있다고 하자. 
+내부에서 변수가 할당되고 있으니, 아직 미완성이라면 완성된 결과물을 테스트할 순 없을 것이다. 
+이걸 '클래스 간의 결합도가 높다' 라고 표현하며,
+컴포넌트가 완성될 때까지 임시의 Dummy로 클래스를 만들어 대체하는 방법을 사용한다.
+
+```java
+public UserServiceImpl(UserRepository userRepository, PasswordRepository passwordEncoder) {
+    this.userRepository = userRepository;
+    this.passwordEncoder = passwordEncoder;
+}
+```
+
+여기서 본 것처럼 어떤 클래스가 필요로 하는 컴포넌트를 외부에서 생성한 후, 내부에서 사용 가능하게 만들어 주는
 과정을 '의존성을 주입한다' 또는 '인젝션한다' 라고 한다. 그리고 이러한 주입을 자동으로 처리하는 기반을 'DI 컨테이너'라 한다.
-그리고 **DI에 등록하는 컴포넌트를 Bean이라 한다.**
 
-DI컨테이너에 인터페이스와 구현 클래스를 알려주고 의존 관계를 정의해주면 자동으로 생성되어 주입된다.
-인스턴스의 생성과 의존 관계의 연결 처리를 소스 코드에서 하지 않고 DI컨테이너가 대신하기 때문에 **제어가 역전되었다**라고 한다.
+### DI 개요
+
+- 인스턴스의 생성과 의존 관계의 연결 처리를 소스 코드에서 하지 않고 DI컨테이너가 대신하기 때문에 **제어가 역전되었다**라고 한다.
+- DI 컨테이너에 인터페이스와 구현 클래스를 알려주고 의존 관계를 정의해주면 자동으로 생성되어 주입된다.
 
 ### DI 컨테이너의 장점
 - 컴포넌트간의 의존성 해결
@@ -20,23 +33,22 @@ DI컨테이너에 인터페이스와 구현 클래스를 알려주고 의존 관
 - 인스턴스의 스코프 관리
 - AOP작업
 
-### 사용방법
-1) ApplicationContext 로 DI 컨테이너를 만든다.
-```
+### DI 컨테이너에서 인스턴스 꺼내기
+- ApplicationContext 가 DI 역할을 한다.
+
+```java
 ApplicationContext context = new AnnotationConfigApplicationContext(AppConfig.class);
-```
-2) getBean으로 DI컨테이너에서 인스턴스를 꺼낸다.
-```
 UserService userService = context.getBean(UserService.class);
 ```
 
 ### AppConfig 클래스
 - AppConfig 클래스는 DI컨테이너에서 설정 파일 역할을 한다.
-- @Configuration어노테이션을 붙여 설정 클래스를 선언한다. (설정 클래스는 여러개 정의 가능)
-- @Bean어노테이션으로 빈을 정의한다. 메서드명이 빈의 이름. 빈의 인스턴스가 반환값이 된다.
+- @Configuration 어노테이션을 붙여 설정 클래스를 선언한다. (설정 클래스는 여러개 정의 가능)
+- @Bean 어노테이션으로 빈을 정의한다. 메서드명이 빈의 이름. 빈의 인스턴스가 반환값이 된다.
 
-### 빈 설정
-빈(Bean) 은 DI컨테이너에서 관리되면서 어플리케이션을 구성하는 컴포넌트 역할의 자바 객체.
+### 빈 설정 방법
+- DI 에 등록하는 컴포넌트를 Bean이라 한다.
+- 빈은 DI컨테이너에서 관리되면서 어플리케이션을 구성하는 컴포넌트 역할의 자바 객체.
 
 1) 자바기반
 - java configuration class 에서 @Configuration 설정클래스 선언
@@ -47,7 +59,55 @@ UserService userService = context.getBean(UserService.class);
 - id="빈이름" class="해당빈의클래스"
 - <sonctructor-arg> 의 ref 속성에 주입할 빈의 이름 기재
 
+3) 애너테이션 기반
+- 빈 설정 파일에 빈을 정의하는 대신, 빈을 정의하는 애너테이션을 빈의 클래스에 부여한다.
+- @Compponent, @Autowired
+
 ### 의존성 주입
+1) 설정자 기반 의존성 주입 방식 (=세터 인젝션)
+- 설정자 메서드의 인수를 통해 의존성 주입
+```java
+// 자바기반
+public class UserServiceImpl implements UserService {
+    private UserRepository userRepository;
+    
+    public void setUserRepository(UserRepository userRepository) {
+        this.userRepository = userRepository;
+    }
+]
+...
+
+@Bean
+UserService userService() {
+    UserServiceImpl userService = new UserServiceImpl();
+    userService.setUserRepository(userRepository());
+}
+```
+
+```java
+// 애너테이션기반 --> 별도 설정 파일을 둘 필요 없다.
+@Component
+public class UserServiceImpl implements UserService {
+    private UserRepository userRepository;
+    
+    @Autowired
+    public void setUserRepository(UserRepository userRepository) {
+        this.userRepository = userRepository;
+    } 
+}
+```
+
+2) 생성자 기반 의존성 주입 방식 (=컨스트럭터 인잭션)
+
+3) 필드 기반 의존성 주입 방식
+- 생성자나 설정자 쓰지 않고 DI 컨테이너 힘을 빌려 의존성 주입하는 방식
+```java
+@Component
+public class UserServiceImpl implements UserService {
+    @Autowired
+    UserRepository userRepository;
+}
+```
 
 ### 오토와이어링
 
@@ -57,10 +117,13 @@ UserService userService = context.getBean(UserService.class);
 
 1) 타입으로 오토와이어링
 
-- @Autowired어노테이션을 넣는다.
+- @Autowired 어노테이션을 넣는다.
 - 필수 조건을 완화하려면 @Autowired(required = false)를 설정한다.
 
 2) 이름으로 오토와이어링
+
+### 컴포넌트 스캔
+- 클래스 로더를 스캔하면서 특정 클래스를 찾은 다음, DI 컨테이너에 등록하는 방법
 
 ### 빈 스코프
 
